# Grafics-Fall2022

./: CMakeLists.txt  final.cbp  final.depend  final.layout  main.cpp
include/: Alcantarilla.h  BmpLoader.h  Cubo.h
resources/: images.jfif
src/: Alcantarilla.cpp  BmpLoader.cpp  Cubo.cpp
